ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gameoflife
  annotations:
    kubernetes.io/ingress.class: "alb"
spec:
  rules:
  - http:
      paths:
        - path: */gameoflife
          backend:
            service:
              name: svc-gameoflife
              port:
                number: 8080
          pathType: Exact
        - path: */openmrs
          backend:
            service:
              name: svc-openmrs
              port:
                number: 8080
          pathType: Exact
